Add a text in about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This Site is created by Stefanatos Alex. It uses data form Mapbox.com and Darksky.net </p>
         <img class="portrait" src="/img/alexis-gianna.jpg" alt="">
     </div>
     {{>footer}}
